Second tab of 1st line start

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
           <span class="profile-tab__foll-count">257 followers</span>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-lg-3"></div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="icons-large">
+          <div class="icons-large__icon icons-large__icon--cook"></div>
+          <div class="icons-large__icon icons-large__icon--cook"></div>
+          <div class="icons-large__icon icons-large__icon--cook"></div>
+          <div class="icons-large__icon icons-large__icon--cook"></div>
+        </div>
+      </div>
       <div class="col-12 col-sm-6 col-lg-3"></div>
       <div class="col-12 col-sm-6 col-lg-3"></div>
     </div>
