3rd day of work: aligned big icons, search 70%, tabs-box

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-    crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="flat-design-body">
@@ -42,19 +42,56 @@
           <div class="profile-tab__prof">Food Photographer</div>
           <a class="profile-tab__follow" href="#" rel="nofollow">follow me</a>
           <div class="profile-tab__underline"></div>
-          <span class="profile-tab__foll-count">1,698 following</span>
-          <span class="profile-tab__foll-count">257 followers</span>
+          <p class="profile-tab__foll-count foll-count"><span class="foll-count__number">1,698</span> following</p>
+          <p class="profile-tab__foll-count"><span class="foll-count__number">257</span> followers</p>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-lg-3">
         <div class="icons-large">
-          <div class="icons-large__icon icons-large__icon--cook"></div>
-          <div class="icons-large__icon icons-large__icon--cook"></div>
-          <div class="icons-large__icon icons-large__icon--cook"></div>
-          <div class="icons-large__icon icons-large__icon--cook"></div>
+          <div class="row row--bot-space-small">
+            <div class="col-6">
+              <div class="icons-large__icon icons-large__icon--cook"></div>
+            </div>
+            <div class="col-6">
+              <div class="icons-large__icon icons-large__icon--bowknot"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 justify-content-around">
+              <div class="icons-large__icon icons-large__icon--heart"></div>
+            </div>
+            <div class="col-6">
+              <div class="icons-large__icon icons-large__icon--deer"></div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-12 col-sm-6 col-lg-3"></div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="search">
+          <input class="search__input" type="text" placeholder="Search">
+          <button class="search__submit"><i class="fa fa-search"></i></button>
+        </div>
+        <div class="search">
+          <input class="search__input" type="text" placeholder="Search">
+          <button class="search__submit"><i class="fa fa-search"></i></button>
+        </div>
+        <div class="tabs-box">
+          <div class="tabs-box__bookmarks bookmarks">
+            <div class="bookmarks__item bookmarks__item--active">Tab 1</div>
+            <div class="bookmarks__item bookmarks__item--pink">Tab 2</div>
+            <div class="bookmarks__item bookmarks__item--coral">Tab 3</div>
+          </div>
+          <div class="tabs-box__inner-text inner-text">
+            <div class="inner-text__text inner-text__text--active">
+              Et qui rerum minus eum harum ab eos delectus iusto. Aut aspernatur ullam consequatur nihil nisi enim eaque. Asperiores sit vel sit earum illo dignissimos sint. Corporis ex laudantium ad veniam laboriosam qui.
+            </div>
+            <div class="inner-text__text">
+            </div>
+            <div class="inner-text__text">
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="col-12 col-sm-6 col-lg-3"></div>
     </div>
   </div>
