no such a big changes

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
           <button class="search__submit"><i class="fa fa-search"></i></button>
         </div>
         <div class="search">
+          <i class="fa fa-search"></i>
           <input class="search__input" type="text" placeholder="Search">
-          <button class="search__submit"><i class="fa fa-search"></i></button>
+          <button class="search__submit search__submit--pink-ok">OK</button>
         </div>
         <div class="tabs-box">
           <div class="tabs-box__bookmarks bookmarks">
