search input rethink -- successful implementation & start small icons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Bootstrap v4 only grid system | JonathanMH</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Flat UI lib</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
   <!--<link rel="stylesheet" href="build/css/style.css">-->
   <link rel="stylesheet" href="build/css/main.css">
@@ -26,7 +29,7 @@
         <div class="col header__line"></div>
       </div>
       <div class="row">
-        <div class="header__reference">2013 - mockup crafted by mariedehayes.com</div>
+        <div class="header__reference">2017 - initial mockup crafted by mariedehayes.com</div>
       </div>
     </div>
   </header>
@@ -37,6 +40,9 @@
           <div class="profile-tab__profile-picture profile-picture">
             <div class="profile-picture__cover"></div>
             <div class="profile-picture__avatar"></div>
+          </div>
+          <div class="profile-tab__space whitespace">
+            <div class="whitespace__height-quarter"></div>
           </div>
           <div class="profile-tab__name">Lyne Williams</div>
           <div class="profile-tab__prof">Food Photographer</div>
@@ -65,16 +71,25 @@
             </div>
           </div>
         </div>
+        <div class="icons-small">
+          <div class="icons-small__item icons-small__item--envelop"></div>
+          <div class="icons-small__item"></div>
+        </div>
+        <div class="icons-small">
+          <div class="icons-small__item message"><i class="fa fa-envelope"></i><div class="message__counter">3</div></div>
+          <div class="icons-small__item"><i class="fa fa-map-marker"></i></div>
+          <div class="icons-small__item menu-bar"><div class=""></div></div>
+        </div>
       </div>
       <div class="col-12 col-sm-6 col-lg-3">
         <div class="search">
           <input class="search__input" type="text" placeholder="Search">
-          <button class="search__submit"><i class="fa fa-search"></i></button>
+          <button class="search__submit search__submit--border-left search__submit--fa"><i class="fa fa-search"></i>&nbsp;</button>
         </div>
         <div class="search">
-          <i class="fa fa-search"></i>
+          <i class="fa fa-search search__fa--pink-ok"></i>
           <input class="search__input" type="text" placeholder="Search">
-          <button class="search__submit search__submit--pink-ok">OK</button>
+          <button class="search__submit search__submit--pink-ok">Go</button>
         </div>
         <div class="tabs-box">
           <div class="tabs-box__bookmarks bookmarks">
@@ -84,7 +99,8 @@
           </div>
           <div class="tabs-box__inner-text inner-text">
             <div class="inner-text__text inner-text__text--active">
-              Et qui rerum minus eum harum ab eos delectus iusto. Aut aspernatur ullam consequatur nihil nisi enim eaque. Asperiores sit vel sit earum illo dignissimos sint. Corporis ex laudantium ad veniam laboriosam qui.
+              Et qui rerum minus eum harum ab eos delectus iusto. Aut aspernatur ullam consequatur nihil nisi enim eaque. Asperiores sit
+              vel sit earum illo dignissimos sint. Corporis ex laudantium ad veniam laboriosam qui.
             </div>
             <div class="inner-text__text">
             </div>
