--- a/index.html
+++ b/index.html
@@ -76,9 +76,22 @@
           <div class="icons-small__item"></div>
         </div>
         <div class="icons-small">
-          <div class="icons-small__item message"><i class="fa fa-envelope"></i><div class="message__counter">3</div></div>
-          <div class="icons-small__item"><i class="fa fa-map-marker"></i></div>
-          <div class="icons-small__item menu-bar"><div class=""></div></div>
+          <div class="icons-small__item message"><i class="fa fa-envelope"></i>
+            <div class="message__counter">3</div>
+          </div>
+          <div class="icons-small__item">
+            <img src="build/img/icons/map-marker.png" alt="map-marker">
+          </div>
+          <div class="icons-small__item">
+            <div class="menu-button">
+              <div class="menu-button__bar"></div>
+              <div class="menu-button__bar"></div>
+              <div class="menu-button__bar"></div>
+            </div>
+          </div>
+          <div>
+            <img src="build/img/icons/check-circ.png" alt="ckecked-circle">
+          </div>
         </div>
       </div>
       <div class="col-12 col-sm-6 col-lg-3">
